proofreading updates pt 1

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -57,4 +57,5 @@
 \newacronym{JLF}{JLF}{Jupiter Laser Facility}
 \newacronym{PPC}{PPC}{particles per cell}
 \newacronym{EPPS}{EPPS}{Electron Positron Proton Spectrometer}
-\newacronym{CPA}{CPA}{Chirped Pulse Amplification}
+\newacronym{CPA}{CPA}{chirped pulse amplification}
+\newacronym{HHG}{HHG}{high-harmonic generation}
