--- a/chap1.tex
+++ b/chap1.tex
@@ -1,9 +1,9 @@
 \chapter{Introduction}
-This chapter introduces lasers, applications of laser-accelerated protons, and gives an outline of the topics presented in this work.
+This chapter introduces ultra-intense lasers, gives applications of laser-accelerated protons, and presents an outline of the topics in this work.
 
-\section{Lasers}
+\section{Lasers} \label{sec:lasers}
 
-The word laser should actually be written as ``LASER'' because it is an acronym: light amplification by stimulated emission of radiation. Stimulated emission refers to Albert Einstein's idea that photons (particles of light) could ``stimulate'' atoms to produce identical photons if the properties of the incident photon are just right CITE. These identical photons form a coherent light source which possess the same quantum-mechanical phase and wavelength. It wasn't until 1954 that Charles Townes and Arthur Schawlow first explored using stimulated emission to generate electromagnetic radiation\footnote{Electromagnetic radiation is just another word for light and is made up of oscillating electric and magnetic fields. The distance between adjacent wave crests in the fields is called the wavelength. Visible light has a wavelength between 400 and 700 nanometers and other forms of light (invisible to the naked eye) are similarly classified according to their wavelengths: radio, microwave, infra-red, ultra-violet, x-ray, gamma.} with a device called the maser (because it produced \emph{microwave} wavelength light). Now, these devices are more called lasers because they produce \emph{light} in other wavelengths (like visible and infrared).
+The word laser should actually be written as ``LASER'' because it is an acronym: light amplification by stimulated emission of radiation. Stimulated emission refers to Albert Einstein's idea that photons (particles of light) could ``stimulate'' atoms to produce identical photons \cite{Einstein_1917_Quantum}. These identical photons form a coherent light source which possess the same quantum-mechanical phase and wavelength. It wasn't until 1954 that Charles Townes and Arthur Schawlow first explored using stimulated emission to generate electromagnetic radiation\footnote{Electromagnetic radiation is just another word for light and is made up of oscillating electric and magnetic fields. The distance between adjacent wave crests in the fields is called the wavelength. Visible light has a wavelength between 400 and 700 nanometers and other forms of light (invisible to the naked eye) are similarly classified according to their wavelengths: radio, microwave, infra-red, ultra-violet, x-ray, gamma.} with a device called the maser (because it produced \emph{microwave} wavelength light). Today, these devices are more often called lasers because they produce \emph{light} in other wavelengths (like visible and infrared).
 
 
 \begin{figure}
@@ -13,14 +13,14 @@ The word laser should actually be written as ``LASER'' because it is an acronym:
 	\label{fig:laser_gain}
 \end{figure}
 
-A typical laser operates by adding energy to some material by a strong flash of light called the pump source. This material is called the active lasing medium. The atoms in the medium absorb light which excites electrons to higher energy states. Over time, these electrons relax back into lower energy states, emitting photons that collide with excited atoms to stimulate emission of more photons. The medium is situated in an optical cavity (or resonator) which is composed of two reflecting mirrors that bounce these photons back and forth many times. With each reflection, photons pass back through the lasing medium, gaining more photons through stimulated emission in the process. As a result, the active lasing medium is sometimes called the gain medium. Since one of the reflectors is only partially reflective, some of this laser light will pass through to become an external laser beam. This process is visualized in \autoref{fig:laser_gain}.
+A typical laser operates by adding energy to some material from a strong flash of light called the pump source. This material is called the active lasing medium. The atoms in the medium absorb light which excites electrons to higher energy states. Over time, these electrons relax back into lower energy states, emitting photons that collide with excited atoms to stimulate emission of more photons. The medium is situated in an optical cavity (or resonator) which is composed of two reflecting mirrors that bounce these photons back and forth many times. With each reflection, photons pass back through the lasing medium, gaining more photon energy through stimulated emission in the process. As a result, the active lasing medium is sometimes called the gain medium. Since one of the reflectors is only partially reflective, some of this laser light will pass through to become an external laser beam. This process is visualized in \autoref{fig:laser_gain}.
 
-Lasers are best known for their ability to produce focused, high intensity light at a particular wavelength. Low powered lasers can be used as a laser pointer for a presentation, while high powered lasers can have enough energy to etch away materials. From both fundamental physics and industry perspectives, scientists are interested in increasing the intensity of lasers to explore various \gls{HEDS} phenomena. The most basic definition of intensity is
+Lasers are best known for their ability to produce focused, high intensity light at a particular wavelength. Low powered lasers can be used as a laser pointer for a presentation, while higher powered lasers can cut solids in half. From both fundamental physics and industry perspectives, scientists are interested in increasing the intensity of lasers to explore various \gls{HEDS} phenomena. The most basic definition of intensity is
 
 \begin{equation}
 	\text{Intensity} = \frac{\text{Energy}}{\text{Area} \times \text{Time}}	
 \end{equation}
-So, for a given laser pulse, increasing the intensity would involve increasing the energy, decreasing the area (in terms of the surface that the laser beam hits), or decreasing the time. The energy can easily be increased by letting the laser stimulate emission of photons in the optical cavity with more passes. However, when the intensity in the cavity becomes too large, damage to the optical components (like the gain medium) can occur. In 1985, this problem was resolved by Donna Strickland and Gerard Mourou \cite{Strickland_1985_Optics} by first stretching an initial pulse in time before reaching the amplification stage. A sufficiently stretched out pulse can continue to gain energy while being sufficiently spread out (less intense) to not damage optical components. After amplification, the pulse is then compressed back into a short pulse. The clever use of gratings that separate light of different wavelengths allows pulses to easily be stretched and compressed in time. This method called \gls{CPA}, is visualized in \autoref{fig:cpa}.
+So, for a given laser pulse, increasing the intensity would involve increasing the energy, decreasing the area (in terms of the surface that the laser beam hits), or decreasing the time. The energy can easily be increased by letting the laser stimulate emission of photons in the optical cavity with more passes. However, when the intensity in the cavity becomes too large, damage to the optical components (like the gain medium) can occur. In 1985, this problem was resolved by Donna Strickland and Gerard Mourou \cite{Strickland_1985_Optics} by first stretching an initial pulse in time before reaching the amplification stage in the gain medium. A stretched pulse can continue to gain energy while being sufficiently spread out (less intense) to not damage optical components. After amplification, the pulse is then compressed back into a shorter pulse. The clever use of gratings that separate light of different wavelengths allows pulses to easily be stretched and compressed in time. This method called \gls{CPA}, is visualized in \autoref{fig:cpa} and resulted in a nobel prize \cite{Nobel_2018}.
 
 \begin{figure}
 	\centering
@@ -28,12 +28,12 @@ So, for a given laser pulse, increasing the intensity would involve increasing t
 	\caption{The stretch, amplification, and compression stages of chirped pulse amplification are depicted. Taken from \cite{Arrigoni_2019_Photonics}.}
 	\label{fig:cpa}
 \end{figure}
-The \gls{CPA} technology enabled lasers to produce high energy, extremely short femtosecond (a billionth of a millionth of a second) long pulses that drove intensities into the relativistic regime -- that is sufficiently high intensities that electrons can be accelerated close to the speed of light. The history of laser intensity since the production of the first laser in 1960 is depicted in \autoref{fig:laser_history}. The graph shows that between 1970-1985, laser intensities did not increase very much, but the invention of \gls{CPA} allowed intensities to increase 2-3 orders of magnitude every decade. The most modern lasers are so intense that they are capable of accelerating protons near the speed of light in the so-called ultra-relativistic regime. If the intensities of lasers continue to increase in the coming decades, physics at the most fundamental level could be explored by analyzing what is going on inside the nucleus of an atom. These intensities would provide insights into the fields of quantum electrodynamics and quantum chromodynamics. 
+The \gls{CPA} technology enabled lasers to produce high energy, extremely short femtosecond (a billionth of a millionth of a second) long pulses that drove intensities into the relativistic regime where electrons can be accelerated to (nearly) the speed of light. The history of laser intensity since the production of the first laser in 1960 is depicted in \autoref{fig:laser_history}. The graph shows that between 1970-1985, laser intensities did not increase very much, but the invention of \gls{CPA} allowed intensities to increase 2-3 orders of magnitude every decade. The most intense lasers today are capable of accelerating protons near the speed of light in the so-called ultra-relativistic regime. If the intensities of lasers continue to increase in the coming decades, physics at the most fundamental level could be explored by analyzing what is going on inside the nucleus of an atom. These intensities would provide insights into the fields of quantum electrodynamics and quantum chromodynamics. 
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.75\linewidth]{planning/images/laser_history.PNG}
-	\caption{History of focused laser intensities from the inception of the laser in 1960. Taken from Figure 4 in Yakovlev \cite{Yakovlev_2014_QE}.}
+	\caption{History of focused laser intensities from the inception of the laser in 1960. The graph is labeled with intensity regimes, technological milestones, and acronyms of laser facilities. Taken from Figure 4 in Yakovlev \cite{Yakovlev_2014_QE}.}
 	\label{fig:laser_history}
 \end{figure}
 
@@ -51,9 +51,9 @@ During the course of my PhD, I have worked on ways to optimize the \gls{TNSA} me
 
 Finding a cure for cancer is one of the largest medical challenges faced worldwide and cancer generally requires the use of harsh treatments like invasive surgery, chemotherapy, and immunotherapy. Another relevant treatment is called radiotherapy and more than half of all people with cancer will receive it as a part of their medical care \cite{Mayo_2024_Cancer}. Typically, a large machine will provide a source of x-rays (a type of energetic ionizing radiation) that kills the tumor. However, this radiation does not discern whether the cells are cancerous or not -- healthy tissue along the radiation beam path surrounding the tumor will also be damaged. This damage can be mitigated by shooting many beams from different angles such that they overlap at the site of the tumor. In this way, the dose delivered in the beam overlap region will be significantly higher than the surrounding tissue. This approach is typically employed by situating the machine on a rotating ``gantry''
 
-As early as 1905, Bragg \cite{Bragg_1905_JOS} identified that charged particles have different properties than x-rays when passing through matter. Specifically, he identified that radium particles lost more energy (i.e. delivered a higher dose) at a lower speed. Physically, the slower the radium particles, the more time it has to interact with each of the individual atoms and the more energy it can deposit. This means that when the radium first enters a material at its highest speed, it is losing energy slowly. In contrast, when the radium is at a slow speed and about to stop, it is losing energy very quickly. In 1946, Wilson \cite{Wilson_1946_Rad} identified that this property of charged particles would enable a more concentrated dose to be delivered closer to the site of a tumor. In \autoref{fig:bragg_curve}, these differences are explicitly highlighted between x-rays and proton beams traveling through water. It can be seen that the proton beam is sharply peaked at a particular distance of around 23 centimeters, where the x-ray beam delivers a relatively higher dose at just a few centimeters. One can see the advantage of protons quite readily from this picture -- if a tumor is located 23 centimeters into the body, the protons, comparatively to the x-rays, will deliver more energy at the tumor site and less energy to the surrounding tissue. The shape of the proton beam curve in this graph is appropriately referred to as a ``Bragg Curve'' which peaks at the ``Bragg Peak''. 
+As early as 1905, Bragg \cite{Bragg_1905_JOS} identified that charged particles have different properties than x-rays when passing through matter. Specifically, he identified that radium particles lost more energy (i.e. delivered a higher dose) at a lower speed. Physically, the slower the radium particles, the more time it has to interact with each of the individual atoms and the more energy it can deposit. This means that when the radium first enters a material at its highest speed, it is losing energy slowly. In contrast, when the radium is at a slow speed and about to stop, it is losing energy very quickly. In 1946, Wilson \cite{Wilson_1946_Rad} identified that this property of charged particles enables the deliver of a concentrated dose close to a tumor site. In \autoref{fig:bragg_curve}, these differences are explicitly highlighted between x-rays and proton beams traveling through water. It can be seen that the proton beam is sharply peaked at a particular distance of around 24 centimeters, where the x-ray beam delivers a higher dose just a few centimeters in. One can see the advantage of protons quite readily from this picture -- if a tumor is located 24 centimeters into the body, the protons, comparatively to the x-rays, will deliver more energy at the tumor site and less energy to the surrounding tissue. The shape of the proton beam curve in this graph is appropriately referred to as a ``Bragg Curve'' which peaks at the ``Bragg Peak''. 
 
-The specifics of the depth-dose curve depend on the material that the particles are traveling through as well as initial energy of the protons. These conditions are well-studied by empirical measurements of the \gls{SRIM} \cite{Ziegler_2010_SRIM} and can be combined with other techniques to achieve a depth-dose curve that not only peaks at different depths, but also has a \gls{SOBP} that expands the region where the highest dose is delivered. The most modern form of proton therapy is called \gls{IMPT} whose intensities are modulated to optimally balance tumor dose and sparing of normal tissues \cite{Mohan_2022_PRO}. The first proton therapy center opened at the Loma Linda University Medical Center in California in 1990, but today there are more than 100 centers around the world with more that are planned or in the process of construction \cite{Mohan_2022_PRO}. 
+The specifics of the depth-dose curve depend on the material that the particles are traveling through as well as initial energy of the protons. These conditions are well-studied by empirical measurements of the \gls{SRIM} \cite{Ziegler_2010_SRIM} and can be combined with other techniques to achieve a depth-dose curve that not only peaks at different depths, but also has a \gls{SOBP} that expands the region where the highest dose is delivered. The most modern form of proton therapy is called \gls{IMPT} whose intensities are modulated to optimally balance tumor dose and sparing of normal tissues \cite{Mohan_2022_PRO}. The first proton therapy center opened at the Loma Linda University Medical Center in California in 1990, but today there are more than 100 centers around the world (with more in the planning or construction stage) \cite{Mohan_2022_PRO}. 
 
 \begin{figure}
 	\centering
@@ -62,24 +62,24 @@ The specifics of the depth-dose curve depend on the material that the particles 
 	\label{fig:bragg_curve}
 \end{figure}
  
-Right here in Columbus, \gls{OSUCCC}, in collaboration with Nationwide Children's Hospital, opened a 55,000 square foot proton therapy center in December of 2023 \cite{OSU_CCC} that uses \gls{IMPT}. Despite all the aformentioned benefits of proton therapy, the intial cost is tremendous -- \gls{OSUCCC} was a 100 million dollar investment. The significant cost demonstrates the value this could bring to Central Ohio. The facility is even outfitted with the capability to perform FLASH therapy which is a newer, experimental form of proton therapy. Compared to conventional methods, FLASH uses much higher dose-rates (i.e. amount of dose per second) with much shorter exposure times (seconds) for the same total dose. The higher dose-rates have been shown to reduce radiation-induced toxicity in healthy tissues in pre-clinical trials \cite{Matuszak_2022_Onc} and is currently under clinical trials \cite{OSU_CCC}. 
+Here in Columbus, \gls{OSUCCC}, in collaboration with Nationwide Children's Hospital, opened a 55,000 square foot proton therapy center in December of 2023 \cite{OSU_CCC} that uses \gls{IMPT}. Despite all the aformentioned benefits of proton therapy, the intial cost is tremendous -- \gls{OSUCCC} was a 100 million dollar investment. The significant cost demonstrates the value this could bring to Central Ohio. The facility is even outfitted with the capability to perform FLASH therapy which is a newer, experimental form of proton therapy. Compared to conventional methods, FLASH uses much higher dose-rates (i.e. amount of dose per second) with much shorter exposure times (seconds) for the same total dose. The higher dose-rates have been shown to reduce radiation-induced toxicity in healthy tissues in pre-clinical trials \cite{Matuszak_2022_Onc} and is currently under clinical trials \cite{OSU_CCC}. 
 
-The conventional cyclotron accelerators used to accelerate the protons are extremely large and expensive which limits their availability to select locations globally. In recent years, it has been proposed that laser-based particle accelerators could be used to generate high energy protons. Just like FLASH therapy, laser-based sources are capable of delivering high dose-rates. Also, these facilities could in principle be smaller and less costly. On the other hand, the technology is not adequately matured to be considered in the near future \cite{Linz_2016_LaPB}. Laser-based sources are typically only able to generate protons in the 10s of MeV reliably (as opposed to the 100s of MeV required for clinical operation), possess orders of magnitude smaller numbers of protons, and poor reproducibility of the laser pulse output. In addition, the conventional accelerators have already made significant strides in terms of reducing cost, increasing beam quality, and reducing size in recent years \cite{Linz_2016_LaPB} which is something laser-based sources will need to keep up with in the future. However, the potential of developing a smaller, lower cost, higher dose rate proton accelerator remains an important motivating factor for many laser-plasma physicists in the coming years.
+The conventional cyclotron accelerators used at \gls{OSUCCC} are extremely large and expensive which limits their availability to select locations globally. In recent years, it has been proposed that laser-based particle accelerators could be used to generate high energy protons. Just like FLASH therapy, laser-based sources are capable of delivering high dose-rates in extremely short exposure times. Also, laser facilities could in principle be smaller and less costly. On the other hand, the technology is not adequately matured to be considered in the near future \cite{Linz_2016_LaPB}. Laser-based sources are typically only able to generate protons in the 10s of MeV reliably (as opposed to the 100s of MeV required for clinical operation), possess orders of magnitude smaller numbers of protons, and poor reproducibility of the laser pulse output. In addition, the conventional accelerators have already made significant strides in terms of reducing cost, increasing beam quality, and reducing size in recent years \cite{Linz_2016_LaPB} which is something laser-based sources will need to keep up with in the future. However, the potential of developing a smaller, lower cost, higher dose rate proton accelerator remains an important motivating factor for many laser-plasma physicists in the coming years.
 
 \subsection{Proton Radiography and Laser Fusion}
 
-All of us are familiar with the use of visible light to image things. A camera's flash will send out a burst of light and the camera will record the light reflected off an object to image it. Other frequencies of light not visible to the naked eye are used all the time to image things as well. High frequency sources like x-rays are used at the dentist due to their ability to probe matter within your body. Radio waves reflect well off of electrically conductive materials like the metals in vehicles which make them ideal for military applications. In an similar way, particles can be used to image objects by analyzing how they interact. Electron microscopes have been used extensively in the past century to image materials at a much higher resolution than an ordinary visible light microscope. From \autoref{fig:bragg_curve}, we know that protons interact with matter in a different way than electromagnetic radiation like x-rays. These differences can be exploited to image things that cannot be done well with other types of radiation \cite{Schaeffer_2023_RevMod}. To give one example, a proton is a charged particle that gets deflected by electric and magnetic fields which can enable scientists to obtain information about these fields in a way that x-rays cannot.
+All of us are familiar with the use of visible light to image things\footnote{Cameras send out a flash of light and the reflected light off an object forms an image on the camera}. Other frequencies of light not visible to the naked eye are used all the time to image things as well. High frequency sources like x-rays are used at the dentist due to their ability to probe matter within your body. Radio waves reflect well off of electrically conductive materials like the metals in vehicles which make them ideal for military applications. In an similar way, particles can be used to image objects by analyzing how they interact. Electron microscopes have been used extensively in the past century to image materials at a much higher resolution than an ordinary visible light microscope. From \autoref{fig:bragg_curve}, we know that protons interact with matter in a different\footnote{Protons interact differently because they are charged and have mass unlike electromagnetic radiation} way than electromagnetic radiation like x-rays. These differences can be exploited to image things that cannot be done well with other types of radiation \cite{Schaeffer_2023_RevMod}.
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.75\linewidth]{planning/images/fusion.png}
+	\includegraphics[width=0.9\linewidth]{planning/images/fusion.png}
 	\caption{Visualization of two different approaches to laser fusion are depicted at the top. Lasers can irradiate the inside of a hollow gold can (called a hohlraum) to indirectly heat a fusion capsule or instead directly heat it. At the bottom, multiple stages of the fusion process are depicted including capsule ablation, compression, and burn. Taken from Figure 1 of Betti et al. \cite{Betti_2016_Nature}. }
 	\label{fig:inertial_fusion}
 \end{figure}
 
-One example of proton radiography using laser-accelerated protons is through the \gls{NIF-ARC}. As it's name implies, \gls{NIF-ARC} is typically used as light source to collect radiograph images of laser fusion experiments at NIF. These fusion experiments involve using a high powered lasers to compress a millimeter sized frozen pellet of hydrogen fuel (specifically, heavier isotopes of hydrogen called deuterium and tritium) to such high temperatures and pressures that the atomic nuclei fuse together into helium. The sun is an example of a high temperature and pressure environment that is able to sustain fusion as its vast source of energy, but we must be a little bit more clever on Earth to obtain conditions like that of in the core of our sun. A similar capability to NIF-ARC exists at the \gls{LLE}'s \gls{OMEGA-EP}. The \gls{OMEGA-EP} provides diagnostics for the main OMEGA laser which performs fusion experiments by directly irradiating a fusion pellet. This is in contrast to the \gls{NIF} which indirectly compresses a fusion pellet by first irradiating a gold can that surrounds the pellet. These approaches are aptly called indirect and direct drive fusion and are depicted in \autoref{fig:inertial_fusion}. Proton radiography has been demonstrated successfully at the \gls{NIF} through \gls{NIF-ARC} \cite{Simpson_2021_PPCF} and at OMEGA through \gls{OMEGA-EP} \cite{Zylstra_2012_RSI} through \gls{TNSA} proton beams produced from laser-irradiated metallic foils.
+One example of proton radiography using laser-accelerated protons is through the \gls{NIF-ARC}. As it's name implies, \gls{NIF-ARC} is typically used as light source to collect radiograph images of laser fusion experiments at NIF. These fusion experiments involve using a high powered lasers to compress a millimeter sized frozen pellet of hydrogen fuel (specifically, heavier isotopes of hydrogen called deuterium and tritium) to such high temperatures and pressures that the atomic nuclei fuse together into helium. The sun is an example of a high temperature and pressure environment that is able to sustain fusion as its vast source of energy, but we must be a little bit more clever on Earth to obtain conditions similar to the core of our sun. A similar capability to NIF-ARC exists at the \gls{LLE}'s \gls{OMEGA-EP}. The \gls{OMEGA-EP} provides diagnostics for the main OMEGA laser which performs fusion experiments by directly irradiating a fusion pellet. This is in contrast to the \gls{NIF} which indirectly compresses a fusion pellet by first irradiating a gold can that surrounds the pellet. These approaches are aptly called indirect and direct drive fusion and are depicted in \autoref{fig:inertial_fusion}. Proton radiography has been demonstrated successfully at the \gls{NIF} through \gls{NIF-ARC} \cite{Simpson_2021_PPCF} and at OMEGA through \gls{OMEGA-EP} \cite{Zylstra_2012_RSI} through \gls{TNSA} proton beams produced from laser-irradiated metallic foils.
 
-Conventional sources of protons for radiography purposes are from linear accelerators like the pRad at \gls{LANL}. \gls{LANL} uses \gls{RF} waves of around 200 MHz to accelerate particles up to 800 MeV (SOURCE). The limitation of conventional \gls{RF} accelerators is the relatively low frequency. If we take the reciprocal of 200 MHz, we find that the separation between individual waves (the period) is around 5 nanoseconds. This may seem like a short time, but on the scale of femtosecond and picosecond ultra-intense pulses, this is a thousand or a million times longer! If one wanted to take proton radiographs of some experiment happening on a picosecond timescale, the conventional accelerator would not work. On the other hand, lasers typically used for laser-plasma experiments are in the infrared and have wavelengths of around 1 micron. A quick calculation tells us that the period is only around 3 femtoseconds. Since the lasers are pulsed at 3 femtoseconds, the emitted protons would also be pulsed at 3 femtoseconds which would theoretically allow us to capture 1 proton radiograph every 3 femtoseconds. Another advantage of these laser-accelerated proton beams is that they are emitted from a very small spot, on the order of microns, which is beneficial for obtaining a higher quality image \cite{Schaeffer_2023_RevMod}.
+Conventional sources of protons for radiography purposes are from linear accelerators like the pRad at \gls{LANL}. \gls{LANL} uses \gls{RF} waves of around 200 MHz to accelerate particles up to 800 MeV \cite{LANL_PRAD}. The limitation of conventional \gls{RF} accelerators is the relatively low frequency. If we take the reciprocal of 200 MHz, we find that the separation between individual waves (the period) is around 5 nanoseconds\footnote{This may seem like a short time, but on the scale of femtosecond and picosecond ultra-intense pulses, this is a thousand or a million times longer!}. If one wanted to take proton radiographs of some experiment happening on a picosecond timescale, the conventional accelerator would not work. On the other hand, lasers typically used for laser-plasma experiments are in the infrared and have wavelengths of around 1 micron. A quick calculation tells us that the period is only around 3 femtoseconds. Since the lasers are pulsed at 3 femtoseconds, the emitted protons would also be pulsed at 3 femtoseconds which would theoretically allow us to capture 1 proton radiograph every 3 femtoseconds. Another advantage of these laser-accelerated proton beams is that they are emitted from a very small spot, on the order of microns, which is beneficial for obtaining a higher quality image \cite{Schaeffer_2023_RevMod}.
 
 \subsection{Materials Characterization}
 
@@ -88,11 +88,11 @@ While protons can generate images through radiography, they can also more genera
 \begin{figure}
 	\centering
 	\includegraphics[width=0.6\linewidth]{planning/images/mass_concentration.jpg}
-	\caption{Mass concentrations of three metal alloys are shown using two different techniques: \gls{EDX} and \gls{XPIF}. Taken from Figure 4 of Boivin et al. \cite{Boivin_2022_NJoP}.}
+	\caption{Mass concentrations of three metal alloys are shown using two different techniques: Energy Dispersive x-ray Fluorescence (EDF) and X-ray and Particle-Induced Fluorescence. Taken from Figure 4 of Boivin et al. \cite{Boivin_2022_NJoP}.}
 	\label{fig:mass_concentration}
 \end{figure}
 
-As a proof of principle, Boivin \cite{Boivin_2022_NJoP} used TNSA beams from the \gls{ALLS} laser facility in Canada to perform \gls{XPIF} to determine the elemental mass concentrations of three different metal alloys: stainless steel, bronze, and  brass. This is compared to a method called \gls{EDX} used in conjunction a conventional mono-energetic electron beam and shown in \autoref{fig:mass_concentration}. Although XPIF has larger error bars than \gls{EDX}, both methods find good agreement with each other.
+As a proof of principle, Boivin \cite{Boivin_2022_NJoP} used TNSA beams from the \gls{ALLS} laser facility in Canada to determine the elemental mass concentrations of three different metal alloys: stainless steel, bronze, and  brass using \gls{XPIF}. This is compared to a method called \gls{EDX} used in conjunction a conventional mono-energetic electron beam and shown in \autoref{fig:mass_concentration}. Although XPIF has larger error bars than \gls{EDX}, both methods find good agreement with each other.
 
 As a final point, \gls{TNSA} beams can be accompanied by other radiation sources like electrons, x-rays, and neutrons. Different materials characterization process could, in principle, be used in conjunction with each other. While \gls{TNSA} beams are not the most common way to characterize materials today, they may emerge as an important tool for their ability to be pulsed at a high repetition rate and generated from a relatively compact system.
 
