--- a/motivation.bib
+++ b/motivation.bib
@@ -17,6 +17,14 @@
 	year = {2019}
 }
 
+@article{Einstein_1917_Quantum, 
+	author = {Einstein, Albert}, 
+	year = {1917}, 
+	title = {The Quantum Theory of Radiation}, 
+	journal = {Physikalische Zeitschrift}, 
+	volume = {18}, 
+	number = {121}
+}
 @misc{MeetOpticsPost, 
 	title={Laser fundamentals: operation and beam characteristics},
 	author={MeetOptics}, 
@@ -139,7 +147,13 @@
 	eprint = {https://pubs.aip.org/aip/rsi/article-pdf/doi/10.1063/1.3680110/16073857/013511\_1\_online.pdf},
 }
 
-
+@misc{LANL_PRAD, 
+	author = {Los Alamos Neutron Science Center}, 
+	url = {https://lansce.lanl.gov/facilities/pRad/index.php}, 
+	year	= {2023},
+	title   = {Proton Radiography},
+	note = {Accessed: 2025-01-31}
+}
 
 
 
