--- a/template.tex
+++ b/template.tex
@@ -99,7 +99,7 @@
 \hyphenation{eigen-state space-time} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%% Document Metadata %%%%%%%%%%%%%%%%%%%%%%%%%
-\title{Enhancing Laser-Driven Ion Acceleration through Computational Methods}
+\title{Enhancing Laser-Driven Proton Acceleration through Computational Methods}
 \author{Ronak Desai}
 \advisorname{Professor Chris Orban}
 \degree{Doctor of Philosophy} % Default value
