--- a/theory.bib
+++ b/theory.bib
@@ -12,6 +12,21 @@
 	journal = {New Journal of Physics}
 }
 
+@article{Sheng_2015_CPB,
+	doi = {10.1088/1674-1056/24/1/015201},
+	url = {https://dx.doi.org/10.1088/1674-1056/24/1/015201},
+	year = {2015},
+	month = {jan},
+	publisher = {IOP Publishing},
+	volume = {24},
+	number = {1},
+	pages = {015201},
+	author = {Sheng, Zheng-Ming and Weng, Su-Ming and Yu, Lu-Le and Wang, Wei-Min and Cui, Yun-Qian and Chen, Min and Zhang, Jie},
+	title = {Absorption of ultrashort intense lasers in laser–solid interactions*},
+	journal = {Chinese Physics B}
+}
+
+
 @article{Corkum_1993_PRL,
 	title = {Plasma perspective on strong field multiphoton ionization},
 	author = {Corkum, P. B.},
