--- a/chap3.tex
+++ b/chap3.tex
@@ -1,5 +1,7 @@
 \chapter{Computational Methods} \label{ch:3}
 
+In this chapter, I will explain some relevant background between two of the computational techniques I've used in this work: the particle-in-cell method and machine learning.
+
 \section{The Particle-In-Cell Method}
 
 The \gls{PIC} method involves solving Maxwell's Equations on a grid 
@@ -21,9 +23,9 @@ For simplicity, non-relativistic equations will be introduced in this section, b
 
 \subsection{Densities and Shape Factors}
 
-When a simulation is initialized, all the particles will have a defined position and velocity. The charge density $\rho_{i,j}$ (for the cell at the $i^\text{th}$ and $j^\text{th}$ grid point in the x and y directions) is easy to compute -- it is simply the sum of all the charges $q_\alpha$ closest to grid point $(i,j)$ divided by the cell area: $\rho_{i,j} \equiv \frac{\sum_\alpha q_\alpha}{\Delta x \Delta y}$ (in 2D symmetry we additionally divide by 1 meter in the z direction to get the units right). The current density $\vec{J}_{i,j}$ can be obtained similarly -- $\vec{J}_{i,j} \equiv \frac{\sum_\alpha q_\alpha \vec{v}_\alpha}{\Delta x \Delta y}$. Assigning the densities to the nearest grid point in this manner is sensibly called \gls{NGP} by Birdsall and Langdon \cite{Birdsall_2004_PIC}.
+When a simulation is initialized, all the particles will have a defined position and velocity. The charge density $\rho_{i,j}$ (for the cell at the $i^\text{th}$ and $j^\text{th}$ grid point in the x and y directions) is easy to compute -- it is simply the sum of all the charges $q_\alpha$ closest to grid point $(i,j)$ divided by the cell area: $\rho_{i,j} \equiv \frac{\sum_\alpha q_\alpha}{\Delta x \Delta y}$\footnote{This is for a 2D geometry where we implicitly divide by 1 m to get the units right. In 3D, the denomenator would have $\Delta z$ as well}. The current density $\vec{J}_{i,j}$ can be obtained similarly -- $\vec{J}_{i,j} \equiv \frac{\sum_\alpha q_\alpha \vec{v}_\alpha}{\Delta x \Delta y}$. Assigning the densities to the nearest grid point in this manner is sensibly called \gls{NGP} by Birdsall and Langdon \cite{Birdsall_2004_PIC}.
 
-Since the PIC approach contains many real particles in each macro particle, it is desired to smooth the macro particle densities throughout the cell(s). We can modify the individual density contributions of particles by a shape factor $S(\vec{r_\alpha} - \vec{r})$ that depends on a particle's location $\vec{r_\alpha}$ in relation to a grid point located at $\vec{r}$. This shape factor is normalized so that integrating it over the area of the simulation yields 1 to ensure the particle number is properly being conserved. The simplest improvement over \gls{NGP} would be the \emph{top hat} shape factor (also called Cloud in Cell \cite{Birdsall_2004_PIC}) which assigns density contributions proportional to proximity of the nearest cells within ($\Delta x$,$\Delta y$). This has the shape of a uniform distribution and thus looks like a ``top hat'' in 1D. It is a $0^\text{th}$ order shape factor and can be represented by the following equation
+Since the PIC approach contains many real particles for each macro particle, it is desired to smooth the macro particle densities throughout adjacent cells. We can modify the individual density contributions of particles by a shape factor $S(\vec{r_\alpha} - \vec{r})$ that depends on a particle's location $\vec{r_\alpha}$ in relation to a grid point located at $\vec{r}$. This shape factor is normalized so that integrating it over the area of the simulation yields 1 to ensure the particle number is properly being conserved. The simplest improvement over \gls{NGP} would be the \emph{top hat} shape factor (also called Cloud in Cell \cite{Birdsall_2004_PIC}) which assigns density contributions proportional to proximity of the nearest cells within ($\Delta x$,$\Delta y$). This has the shape of a uniform distribution and thus looks like a ``top hat'' in 1D. It is a $0^\text{th}$ order shape factor and can be represented by the following equation
 
 \begin{equation}
 	S_0(x) \equiv \begin{cases}
@@ -31,7 +33,7 @@ Since the PIC approach contains many real particles in each macro particle, it i
 		0 & \text{otherwise}
 	\end{cases} \label{eq:tophat}
 \end{equation}
-A further improvement will weigh the particles closer to a particular grid point higher than a particle further away. If this weighting is linear over an area ($2 \Delta x$, $2 \Delta y$), it is called the \emph{triangle} shape factor and reprsented by the following equation in 1D
+A further improvement will weight the particles closer to a particular grid point higher than a particle further away. If this weighting is linear over an area ($2 \Delta x$, $2 \Delta y$), it is called the \emph{triangle} shape factor and reprsented by the following equation in 1D
 
 \begin{equation}
 	S_1(x) \equiv \begin{cases}
@@ -60,9 +62,7 @@ and the shape factors for $n \geq 2$ are commonly called n-splines. The third or
 		0 & \text{otherwise}
 	\end{cases}
 \end{equation}
-where $\tilde{x} \equiv x / \Delta x$ normalizes the position $x$. See \cref{fig:shape_factors} for a comparison of the three shape factors. 
-
-These shape factors not only apply to the calculation of densities, but also to the electric and magnetic fields. In this way, the fields used to update particle positions and velocities are averaged over neighboring cells.
+where $\tilde{x} \equiv x / \Delta x$ normalizes the position $x$. See \cref{fig:shape_factors} for a comparison of the three shape factors. These shape factors not only apply to the calculation of densities, but also to the electric and magnetic fields. In this way, the fields used to update particle positions and velocities are averaged over neighboring cells.
 
 \subsection{Field Solver and Particle Push}
 
@@ -84,7 +84,7 @@ where $\vec{J}^{n+\frac{1}{2}} \equiv \frac{\sum_\alpha q_\alpha \vec{v}^{n+\fra
 \begin{equation}
 	\frac{v^{n + \frac{1}{2}}_\alpha - v^{n - \frac{1}{2}}_\alpha}{\Delta t} = \frac{q}{m}[E^n_\alpha + \frac{v^{n + \frac{1}{2}}_\alpha + v^{n + \frac{1}{2}}_\alpha}{2} \times B^n_\alpha] \label{eq:v_update}
 \end{equation}
-The $\alpha$ subscript indicates the quantities are calculated for each particle; thus, the fields are smoothed out by the shape factor (e.g. $E^n_\alpha \equiv \int E^n S_3(x-x_\alpha, y-y_\alpha, z-z_\alpha) dx \; dy \; dz$). In practice, \cref{eq:B_update,eq:E_update} are broken up into half-steps so that the electric and magnetic field are known for all half-steps. At first glance, \cref{eq:v_update} does not appear to have an explicit solution for $v^{n + \frac{1}{2}}$. There are implicit methods that can solve this equation which are used in codes like \gls{LSP} \cite{Welch_2004_LSP}. It turns out that there is an explicit solution given by the \emph{Boris Rotation Algorithm}. If we define 
+The $\alpha$ subscript indicates the quantities are calculated for each particle; thus, the fields are smoothed out by the shape factor (e.g. $E^n_\alpha \equiv \int E^n S_3(x-x_\alpha, y-y_\alpha, z-z_\alpha) dx \; dy \; dz$). In practice, \cref{eq:B_update,eq:E_update} are broken up into half-steps so that the electric and magnetic field are known for all half-steps. At first glance, \cref{eq:v_update} does not appear to have an explicit solution for $v^{n + \frac{1}{2}}$. There are implicit methods that can solve this equation like \gls{LSP} \cite{Welch_2004_LSP}. It turns out that there is an explicit solution given by the \emph{Boris Rotation Algorithm}. If we define 
 
 \begin{align}
 	v^{n + \frac{1}{2}} &= v^+ + \frac{q E^n}{2 m} \Delta t \label{eq:vplus} \\
@@ -112,18 +112,17 @@ Now, the particles can be advanced or ``pushed'' from
 For completeness, the velocity initially needs to be pushed backwards from $v^{0} \rightarrow v^{-\frac{1}{2}}$. This is not done in a time-centered way, but is only needed at the start of the simulation. 
 
 \section{Machine Learning}
-What is \gls{ML}? According to the computer scientist Arthur Samuel who popularized the term in 1959, it is the 
+What is \gls{ML}? According to the computer scientist Arthur Samuel who popularized the term in 1959 \cite{Geron_2023_ML}, it is the 
 
 \begin{quote}
-	... field of study that gives computers the ability to learn without being explicitly programmed. \cite{Geron_2023_ML}
+	... field of study that gives computers the ability to learn without being explicitly programmed. 
 \end{quote}
-
 The book \emph{Hands-On Machine Learning with Scikit-Learn} by Aurelien Geron \cite{Geron_2023_ML} gives a simple example of how a \gls{ML} model differs from a more traditional computer program in the form of an email spam filter. A traditional filter would implement user specified rules that mark emails as spam based on e-mail address and subject line keywords for example. A \gls{ML} approach would determine what keywords and e-mail addresses to look for based on prior emails that have been flagged as spam.
 
-The key difference in the two approaches is predictive power. The traditional filter can remove spam from messages that fit a pattern explicitly given by the user. The \gls{ML} filter can learn a generalized model that can predict possibly unforeseen types of spam. Since the \gls{ML} model is much more general, it is more susceptible to incorrect predictions. In this section, we'll overview how to handle data for \gls{ML} algorithms, compare model training for different methods, and explain how these models can be used in practice. The information below is largely from the book by Geron \cite{Geron_2023_ML} unless specified otherwise.
+The key difference in the two approaches is predictive power. The traditional filter removes spam from messages that fit a pattern explicitly given by the user. The \gls{ML} filter learns a generalized model that predicts possibly unforeseen types of spam. Since the \gls{ML} model is much more general, it is more susceptible to incorrect predictions. In this section, we'll overview how to handle data for \gls{ML} algorithms, compare model training for different methods, and explain how these models can be used in practice. The information below is largely from the book by Geron \cite{Geron_2023_ML} unless specified otherwise.
 
 \subsection{Pre-processing}
-\gls{ML} can be either supervised or unsupervised based on whether the data is labeled with a particular output. In the \gls{ML} context, model outputs are often referred to as labels and model inputs are often referred to as features. For the e-mail classification example, a supervised model would have training data that is already labeled as spam (or not) and an unsupervised model would have to infer if the data is spam by other means (e.g. clustering similar emails together). We will not be considering unsupervised learning in this work because we are ultimately interested in labeled data (which would be electron or proton energy spectra). To train an \gls{ML} effectively, there are various things we need to take into account: 
+\gls{ML} can be either supervised or unsupervised based on whether the data is labeled with a particular output. In the \gls{ML} context, model outputs are often referred to as labels and model inputs are often referred to as features. For the e-mail classification example, a supervised model would have training data that is already labeled as spam (or not spam) and an unsupervised model would have to infer if the data is spam by other means (e.g. clustering similar emails together). We will not be considering unsupervised learning in this work because we are ultimately interested in labeled data (which would be electron or proton energy spectra). To train an \gls{ML} model effectively, there are various things that need to be taken into account: 
 
 \begin{itemize}
 	\item Data Quantity: We need a sufficient amount of data in order to learn relevant trends and patterns. For example, a good spam classifier would have many e-mails (thousands to millions) to train on.
@@ -135,13 +134,13 @@ Failure to take the preceding steps into account can oftentimes lead to one of t
 
 \begin{itemize}
 	\item Overfitting: This can happen when the data is too complex in relation to the data. An example would be using a polynomial to fit a set of points that fall on a straight line. To fix this, we can constrain the model to make it more simple, gather more training data, or reduce noise in the training set.
-	\item Underfitting: When the model is too simple in relation to the data. This can be fixed by selecting a more complex model, using better features, and reducing any constraints on the model.
+	\item Underfitting: This is when the model is too simple in relation to the data. This can be fixed by selecting a more complex model, using better features, and reducing any constraints on the model.
 \end{itemize} 
-To improve the quality of the existing data, we can perform \emph{pre-processing} which is the set of actions performed to transform raw data into data ready to be fed into a \gls{ML} model. In \autoref{ch:6}, significant pre-processing was needed which included removing missing values, combining data sources, applying a median-based filter, compressing the spectra into two metrics, and more. One particularly effective method of pre-processing that is specific to \gls{ML} is data normalization which makes sure that all the inputs are approximately on the same scale. The two most common ways to approach this are summarized below: 
+To improve the quality of the existing data, we can perform \emph{pre-processing} which is the set of actions that transform raw data into data ready to be fed into a \gls{ML} model. In \autoref{ch:6}, significant pre-processing was needed which included removing missing values, combining data sources, applying a median-based filter, compressing the spectra into two metrics, and more. One particularly effective method of pre-processing that is specific to \gls{ML} is data normalization which makes sure that all the features and labels are approximately on the same scale. The two most common ways to approach this are summarized below: 
 
 \begin{itemize}
 	\item Standard Scaling: A particular feature can be transformed through the following: $x_i \rightarrow \frac{x_i - \mu}{\sigma}$ where $\mu$ is the mean of all the data points $x_i$ and $\sigma$ is the standard deviation. This normalizes the data to be centered at 0 and have a standard deviation of 1. 
-	\item Min Max Scaling: A particular features can be transformed by setting the minimum value to 0, the maximum value to 1, and all values in between would be linearly proportional. 
+	\item Min Max Scaling: A particular feature can be transformed by setting the minimum value to 0, the maximum value to 1, and all values in between would be linearly proportional. 
 \end{itemize}
 The Min Max Scaling is useful when the data is known to be uniformly distributed with a fixed minimum and maximum. The Standard Scaling is more general and works best if the data is normally distributed. 
 
@@ -167,12 +166,10 @@ A polynomial model is one simple model that involves minimizing the \gls{MSE} be
 \end{equation}
 where $\beta_{i,j}$ are the polynomial coefficients. This equation incorporated two inputs $x_1$ and $x_2$ but can be generalized for any number of inputs. These coefficients can be found by a least-squares minimization algorithm. 
 
-In principle, any dataset can be fit by a polynomial model of a sufficiently high degree. However, such a model would be prone to overfitting -- a good model with predictive power should be able to predict data not yet seen. Wolpert \cite{Wolpert_1997_IEEE} famously showed in his 1996 paper that if we don't make any assumptions about the data at hand, then there is no reason to prefer a particular \gls{ML} model over another. This is sometimes referred to as the ``no free lunch'' theorem. Therefore, it is always instructive to experiment with a variety of models to see which one works best. 
+In principle, any dataset can be fit by a polynomial model of a sufficiently high degree. However, such a model would be prone to overfitting -- a good model with predictive power should be able to predict data not yet seen. Wolpert \cite{Wolpert_1997_IEEE} famously showed in his 1996 paper that if we don't make any assumptions about the data at hand, then there is no reason to prefer a particular \gls{ML} model over another. This is sometimes referred to as the \emph{no free lunch} theorem. Therefore, it is always instructive to experiment with a variety of models to see which one works best. 
 
-Instead of a polynomial, more sophisticated regression models can be used like the ridge regression which uses a regularization hyperparameter to avoid overfitting. In a similar vein, \gls{SVR} (which falls in the class of support vector machines) use a regularization parameter that tries to maximize the number of data points that are close to the prediction but do not exactly match the prediction. 
+Instead of a polynomial, more sophisticated regression models can be used like the ridge regression which uses a regularization hyperparameter to avoid overfitting. In a similar vein, \gls{SVR} (which falls in the class of support vector machines) use a regularization parameter that tries to maximize the number of data points that are close to the prediction but do not exactly match the prediction. A big advantage of the \gls{SVR} is that it can take advantage of the so-called ``kernel trick'' which allows the model to use higher dimensional features (like the polynomial model), but without explicitly calculating all the higher order components. Importantly, this has both time and memory saving implications. A common ``kernel'' is the \gls{RBF} which calculates a similarity measure between two data points involving a dot product which is easy to compute. 
 
-A big advantage of the \gls{SVR} is that it can take advantage of the so-called ``kernel trick'' which allows the model to use higher dimensional features (like the polynomial model), but without explicitly calculating all the higher order components. Importantly, this has both time and memory saving implications. A common ``kernel'' is the \gls{RBF} which calculates a similarity measure between two data points involving a dot product which is easy to compute. For more information on support vector machines, see the text by Geron \cite{Geron_2023_ML}. 
-
-Another regression method that can make use of the kernel trick is the Gaussian Process -- a method that doesn't just construct one function to fit the data, but rather a distribution of functions that all fit the data. The functions can effectively be averaged to create a \gls{GPR} or an uncertainty can be quantified by taking a standard deviation of this probability distribution. 
+Another regression method that can make use of the kernel trick is the Gaussian Process -- a method that doesn't just construct one function to fit the data, but rather a distribution of functions that all fit the data. The functions can effectively be averaged to create a \gls{GPR} or an uncertainty can be quantified by taking a standard deviation of this probability distribution. These are particularly useful in the context of \gls{BO} where the uncertainty information can inform new parameters to explore when data is expensive or difficult to obtain.
 
 A more general purpose model capable of learning functions of extremely high complexity is the \gls{NN}. This model, just like a linear regression, fits an intercept and coefficients to each input variable. Unlike the linear regression, the output of the first linear regression is the input of a  ...
